2006-11-13  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* data/epiphany-fonts.schemas:
	* data/generate-font-schemas.py:

	Change default font sizes to match other popular
	browsers. Bug #346026 (patch by Diego Escalante Urrelo).

2006-11-12  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/ephy-navigation-action.c: (activate_by_history_index):
	* src/ephy-shell.c: (ephy_shell_new_tab_full):

	Remove a double call to history copy when middle-clicking on back/forward buttons.
	Fix bug #362882.

2006-11-12  Ryan Lortie  <desrt@desrt.ca>

	* src/ephy-notebook.c (build_tab_label): Remove redundant
	gtk_button_set_relief call.  Fixes bug #372760.

2006-11-10  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* autogen.sh: Add useful warning when gnome-autogen.sh
	couldn't be found.

2006-11-10  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* src/ephy-lockdown.c: (update_window):
	Also disable the "Open Image" context menu action if the
	desktop wide "disable save to disk" lockdown key is
	enabled. Reported on IRC by Gerald E Butler.

2006-11-10  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* src/ephy-window.c:
	Add some more F5 shortcuts to handle all the MSIE
	"refresh page" bindings. Fixes bug #372906.

2006-11-06  Christian Persch  <chpe@cvs.gnome.org>

	* ChangeLog-20061106:
	* Makefile.am:

	Split ChangeLog.

	* configure.ac:

	Post-release version bump.